# c-sdk

./: CMakeLists.txt  README.md  c.tgz
.github/workflows/: update-c-sdk.yml
.openapi-generator/: FILES
api/: AccountAPI.c  AccountAPI.h  AttributeAPI.c  AttributeAPI.h  BasketAPI.c  BasketAPI.h  BatchAPI.c  BatchAPI.h  BridgeAPI.c  BridgeAPI.h  CartAPI.c  CartAPI.h  CategoryAPI.c  CategoryAPI.h  CustomerAPI.c  CustomerAPI.h  MarketplaceAPI.c  MarketplaceAPI.h  OrderAPI.c  OrderAPI.h  ProductAPI.c  ProductAPI.h  ReturnAPI.c  ReturnAPI.h  SubscriberAPI.c  SubscriberAPI.h  TaxAPI.c  TaxAPI.h  WebhookAPI.c  WebhookAPI.h
docs/: AccountAPI.md  AttributeAPI.md  BasketAPI.md  BatchAPI.md  BridgeAPI.md  CartAPI.md  CategoryAPI.md  CustomerAPI.md  MarketplaceAPI.md  ModelReturn.md  OrderAPI.md  ProductAPI.md  ReturnAPI.md  SubscriberAPI.md  TaxAPI.md  WebhookAPI.md  a2_c_date_time.md  account_cart_add.md  account_cart_add_200_response.md  account_cart_add_200_response_result.md  account_cart_add_hybris_websites_inner.md  account_cart_list_200_response.md  account_cart_list_200_response_result.md  account_cart_list_200_response_result_carts_inner.md  account_config_update_200_response.md  account_config_update_200_response_result.md  account_failed_webhooks_200_response.md  account_failed_webhooks_200_response_result.md  account_failed_webhooks_200_response_result_webhook_inner.md  account_supported_platforms_200_response.md  account_supported_platforms_200_response_result.md  account_supported_platforms_200_response_result_supported_platforms_inner.md  account_supported_platforms_200_response_result_supported_platforms_inner_params.md  account_supported_platforms_200_response_result_supported_platforms_inner_params_required_inner_inner.md  attribute_add_200_response.md  attribute_add_200_response_result.md  attribute_assign_group_200_response.md  attribute_assign_group_200_response_result.md  attribute_count_200_response.md  attribute_count_200_response_result.md  (+424 more)
include/: apiClient.h
model/: a2_c_date_time.c  a2_c_date_time.h  account_cart_add.c  account_cart_add.h  account_cart_add_200_response.c  account_cart_add_200_response.h  account_cart_add_200_response_result.c  account_cart_add_200_response_result.h  account_cart_add_hybris_websites_inner.c  account_cart_add_hybris_websites_inner.h  account_cart_list_200_response.c  account_cart_list_200_response.h  account_cart_list_200_response_result.c  account_cart_list_200_response_result.h  account_cart_list_200_response_result_carts_inner.c  account_cart_list_200_response_result_carts_inner.h  account_config_update_200_response.c  account_config_update_200_response.h  account_config_update_200_response_result.c  account_config_update_200_response_result.h  account_failed_webhooks_200_response.c  account_failed_webhooks_200_response.h  account_failed_webhooks_200_response_result.c  account_failed_webhooks_200_response_result.h  account_failed_webhooks_200_response_result_webhook_inner.c  account_failed_webhooks_200_response_result_webhook_inner.h  account_supported_platforms_200_response.c  account_supported_platforms_200_response.h  account_supported_platforms_200_response_result.c  account_supported_platforms_200_response_result.h  account_supported_platforms_200_response_result_supported_platforms_inner.c  account_supported_platforms_200_response_result_supported_platforms_inner.h  account_supported_platforms_200_response_result_supported_platforms_inner_params.c  account_supported_platforms_200_response_result_supported_platforms_inner_params.h  account_supported_platforms_200_response_result_supported_platforms_inner_params_required_inner_inner.c  account_supported_platforms_200_response_result_supported_platforms_inner_params_required_inner_inner.h  attribute_add_200_response.c  attribute_add_200_response.h  attribute_add_200_response_result.c  attribute_add_200_response_result.h  (+856 more)
src/: apiClient.c
unit-test/: test_a2_c_date_time.c  test_account_cart_add.c  test_account_cart_add_200_response.c  test_account_cart_add_200_response_result.c  test_account_cart_add_hybris_websites_inner.c  test_account_cart_list_200_response.c  test_account_cart_list_200_response_result.c  test_account_cart_list_200_response_result_carts_inner.c  test_account_config_update_200_response.c  test_account_config_update_200_response_result.c  test_account_failed_webhooks_200_response.c  test_account_failed_webhooks_200_response_result.c  test_account_failed_webhooks_200_response_result_webhook_inner.c  test_account_supported_platforms_200_response.c  test_account_supported_platforms_200_response_result.c  test_account_supported_platforms_200_response_result_supported_platforms_inner.c  test_account_supported_platforms_200_response_result_supported_platforms_inner_params.c  test_account_supported_platforms_200_response_result_supported_platforms_inner_params_required_inner_inner.c  test_attribute_add_200_response.c  test_attribute_add_200_response_result.c  test_attribute_assign_group_200_response.c  test_attribute_assign_group_200_response_result.c  test_attribute_count_200_response.c  test_attribute_count_200_response_result.c  test_attribute_delete_200_response.c  test_attribute_delete_200_response_result.c  test_attribute_info_200_response.c  test_attribute_type_list_200_response.c  test_attribute_type_list_200_response_result.c  test_attribute_unassign_group_200_response.c  test_attribute_unassign_group_200_response_result.c  test_attribute_update_200_response.c  test_attribute_update_200_response_result.c  test_attribute_value_delete_200_response.c  test_attribute_value_delete_200_response_result.c  test_base_customer.c  test_basket.c  test_basket_info_200_response.c  test_basket_item.c  test_basket_item_add_200_response.c  (+408 more)
